NAS-105824 possible workaround for perfect scrollbar windows bug

--- a/src/app/components/common/layouts/admin-layout/admin-layout.component.css
+++ b/src/app/components/common/layouts/admin-layout/admin-layout.component.css
@@ -54,3 +54,7 @@
 .fn-maincontent {
   overflow:  hidden !important;
 }
+
+.win-scroll {
+  overflow: scroll !important;
+}
